--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "build": "vite build",
     "start": "vite preview"
   },
+  "engines": {
+  "node": "16.x"
+}
   "dependencies": {
     "@supabase/supabase-js": "^2.45.0",
     "@vitejs/plugin-react": "^4.3.1",
