--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "ganesh-trade",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "start": "vite preview"
   },
   "engines": {
-  "node": "16.x"
-},
+    "node": "16.x"
+  },
   "dependencies": {
     "@supabase/supabase-js": "^2.45.0",
     "@vitejs/plugin-react": "^4.3.1",
